Use Map.ofEntries() for simplifying static initialization
Note that TransformerFactories is now immutable.