@@ -17,8 +17,6 @@
 
 package org.apache.solr.search;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import org.apache.solr.search.join.BlockJoinChildQParserPlugin;
 import org.apache.solr.search.join.BlockJoinParentQParserPlugin;
@@ -40,54 +38,50 @@ public class QParserPlugins {
    * static fields and to case when NAME field is not yet initialized. This result to NPE during
    * initialization. For every plugin, listed here, NAME field has to be final and static.
    */
-  public static final Map<String, QParserPlugin> standardPlugins;
-
-  static {
-    HashMap<String, QParserPlugin> map = new HashMap<>(30, 1);
-    map.put(LuceneQParserPlugin.NAME, new LuceneQParserPlugin());
-    map.put(FunctionQParserPlugin.NAME, new FunctionQParserPlugin());
-    map.put(PrefixQParserPlugin.NAME, new PrefixQParserPlugin());
-    map.put(BoostQParserPlugin.NAME, new BoostQParserPlugin());
-    map.put(DisMaxQParserPlugin.NAME, new DisMaxQParserPlugin());
-    map.put(ExtendedDismaxQParserPlugin.NAME, new ExtendedDismaxQParserPlugin());
-    map.put(FieldQParserPlugin.NAME, new FieldQParserPlugin());
-    map.put(RawQParserPlugin.NAME, new RawQParserPlugin());
-    map.put(TermQParserPlugin.NAME, new TermQParserPlugin());
-    map.put(TermsQParserPlugin.NAME, new TermsQParserPlugin());
-    map.put(NestedQParserPlugin.NAME, new NestedQParserPlugin());
-    map.put(FunctionRangeQParserPlugin.NAME, new FunctionRangeQParserPlugin());
-    map.put(SpatialFilterQParserPlugin.NAME, new SpatialFilterQParserPlugin());
-    map.put(SpatialBoxQParserPlugin.NAME, new SpatialBoxQParserPlugin());
-    map.put(JoinQParserPlugin.NAME, new JoinQParserPlugin());
-    map.put(SurroundQParserPlugin.NAME, new SurroundQParserPlugin());
-    map.put(SwitchQParserPlugin.NAME, new SwitchQParserPlugin());
-    map.put(MaxScoreQParserPlugin.NAME, new MaxScoreQParserPlugin());
-    map.put(BlockJoinParentQParserPlugin.NAME, new BlockJoinParentQParserPlugin());
-    map.put(BlockJoinChildQParserPlugin.NAME, new BlockJoinChildQParserPlugin());
-    map.put(FiltersQParserPlugin.NAME, new FiltersQParserPlugin());
-    map.put(CollapsingQParserPlugin.NAME, new CollapsingQParserPlugin());
-    map.put(SimpleQParserPlugin.NAME, new SimpleQParserPlugin());
-    map.put(ComplexPhraseQParserPlugin.NAME, new ComplexPhraseQParserPlugin());
-    map.put(ReRankQParserPlugin.NAME, new ReRankQParserPlugin());
-    map.put(ExportQParserPlugin.NAME, new ExportQParserPlugin());
-    map.put(MLTQParserPlugin.NAME, new MLTQParserPlugin());
-    map.put(MLTContentQParserPlugin.NAME, new MLTContentQParserPlugin());
-    map.put(HashQParserPlugin.NAME, new HashQParserPlugin());
-    map.put(GraphQParserPlugin.NAME, new GraphQParserPlugin());
-    map.put(XmlQParserPlugin.NAME, new XmlQParserPlugin());
-    map.put(GraphTermsQParserPlugin.NAME, new GraphTermsQParserPlugin());
-    map.put(IGainTermsQParserPlugin.NAME, new IGainTermsQParserPlugin());
-    map.put(TextLogisticRegressionQParserPlugin.NAME, new TextLogisticRegressionQParserPlugin());
-    map.put(SignificantTermsQParserPlugin.NAME, new SignificantTermsQParserPlugin());
-    map.put(PayloadScoreQParserPlugin.NAME, new PayloadScoreQParserPlugin());
-    map.put(PayloadCheckQParserPlugin.NAME, new PayloadCheckQParserPlugin());
-    map.put(BoolQParserPlugin.NAME, new BoolQParserPlugin());
-    map.put(MinHashQParserPlugin.NAME, new MinHashQParserPlugin());
-    map.put(HashRangeQParserPlugin.NAME, new HashRangeQParserPlugin());
-    map.put(RankQParserPlugin.NAME, new RankQParserPlugin());
-    map.put(KnnQParserPlugin.NAME, new KnnQParserPlugin());
-    map.put(VectorSimilarityQParserPlugin.NAME, new VectorSimilarityQParserPlugin());
-
-    standardPlugins = Collections.unmodifiableMap(map);
-  }
+  public static final Map<String, QParserPlugin> standardPlugins =
+      Map.ofEntries(
+          Map.entry(LuceneQParserPlugin.NAME, new LuceneQParserPlugin()),
+          Map.entry(FunctionQParserPlugin.NAME, new FunctionQParserPlugin()),
+          Map.entry(PrefixQParserPlugin.NAME, new PrefixQParserPlugin()),
+          Map.entry(BoostQParserPlugin.NAME, new BoostQParserPlugin()),
+          Map.entry(DisMaxQParserPlugin.NAME, new DisMaxQParserPlugin()),
+          Map.entry(ExtendedDismaxQParserPlugin.NAME, new ExtendedDismaxQParserPlugin()),
+          Map.entry(FieldQParserPlugin.NAME, new FieldQParserPlugin()),
+          Map.entry(RawQParserPlugin.NAME, new RawQParserPlugin()),
+          Map.entry(TermQParserPlugin.NAME, new TermQParserPlugin()),
+          Map.entry(TermsQParserPlugin.NAME, new TermsQParserPlugin()),
+          Map.entry(NestedQParserPlugin.NAME, new NestedQParserPlugin()),
+          Map.entry(FunctionRangeQParserPlugin.NAME, new FunctionRangeQParserPlugin()),
+          Map.entry(SpatialFilterQParserPlugin.NAME, new SpatialFilterQParserPlugin()),
+          Map.entry(SpatialBoxQParserPlugin.NAME, new SpatialBoxQParserPlugin()),
+          Map.entry(JoinQParserPlugin.NAME, new JoinQParserPlugin()),
+          Map.entry(SurroundQParserPlugin.NAME, new SurroundQParserPlugin()),
+          Map.entry(SwitchQParserPlugin.NAME, new SwitchQParserPlugin()),
+          Map.entry(MaxScoreQParserPlugin.NAME, new MaxScoreQParserPlugin()),
+          Map.entry(BlockJoinParentQParserPlugin.NAME, new BlockJoinParentQParserPlugin()),
+          Map.entry(BlockJoinChildQParserPlugin.NAME, new BlockJoinChildQParserPlugin()),
+          Map.entry(FiltersQParserPlugin.NAME, new FiltersQParserPlugin()),
+          Map.entry(CollapsingQParserPlugin.NAME, new CollapsingQParserPlugin()),
+          Map.entry(SimpleQParserPlugin.NAME, new SimpleQParserPlugin()),
+          Map.entry(ComplexPhraseQParserPlugin.NAME, new ComplexPhraseQParserPlugin()),
+          Map.entry(ReRankQParserPlugin.NAME, new ReRankQParserPlugin()),
+          Map.entry(ExportQParserPlugin.NAME, new ExportQParserPlugin()),
+          Map.entry(MLTQParserPlugin.NAME, new MLTQParserPlugin()),
+          Map.entry(MLTContentQParserPlugin.NAME, new MLTContentQParserPlugin()),
+          Map.entry(HashQParserPlugin.NAME, new HashQParserPlugin()),
+          Map.entry(GraphQParserPlugin.NAME, new GraphQParserPlugin()),
+          Map.entry(XmlQParserPlugin.NAME, new XmlQParserPlugin()),
+          Map.entry(GraphTermsQParserPlugin.NAME, new GraphTermsQParserPlugin()),
+          Map.entry(IGainTermsQParserPlugin.NAME, new IGainTermsQParserPlugin()),
+          Map.entry(
+              TextLogisticRegressionQParserPlugin.NAME, new TextLogisticRegressionQParserPlugin()),
+          Map.entry(SignificantTermsQParserPlugin.NAME, new SignificantTermsQParserPlugin()),
+          Map.entry(PayloadScoreQParserPlugin.NAME, new PayloadScoreQParserPlugin()),
+          Map.entry(PayloadCheckQParserPlugin.NAME, new PayloadCheckQParserPlugin()),
+          Map.entry(BoolQParserPlugin.NAME, new BoolQParserPlugin()),
+          Map.entry(MinHashQParserPlugin.NAME, new MinHashQParserPlugin()),
+          Map.entry(HashRangeQParserPlugin.NAME, new HashRangeQParserPlugin()),
+          Map.entry(RankQParserPlugin.NAME, new RankQParserPlugin()),
+          Map.entry(KnnQParserPlugin.NAME, new KnnQParserPlugin()),
+          Map.entry(VectorSimilarityQParserPlugin.NAME, new VectorSimilarityQParserPlugin()));
 }
